--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Zombie Slayer</title>
 <style>
+#kill {
+    display: none;
+  }
 #Zombie {
                 display: none;   
             }
