--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <button id="killZombie" onclick="showSure()">Kill Zombie</button>
         <form id="kill">
         <input type="text" placeholder="Are You Sure?" required>
-        <button onclick="killZombie()">ENTER</button>
+        <button onclick="killZombie()" type="button">ENTER</button>
         </form>
         <div id="Zombie">
         <div id="headFull">
